# LLM-Interpretability

./: README.md  automation.py  automation_helper.py  cot_filter_data.ipynb  golden_programs.py  interpetability.ipynb  interpretability.ipynb  interpretability_copy.ipynb  iou_interpolation_experiments.ipynb  logit_evaluation.ipynb  next_token_attention.ipynb  practice.ipynb  programs.py  prompt_automation_example.ipynb  small_text.csv  temp.ipynb
data/: abstract_algebra_test.json  bert_headscores.npy  bert_program_complexity_scores.npy  bert_refinement.csv  bert_scores_1.npy  bert_scores_2.npy  best_fit.csv  best_fit_3.csv  best_fit_gpt2.csv  best_fit_new.csv  best_fit_refinement_bert.csv  best_fit_refinement_bert_iou.csv  best_fit_refinement_bert_test.csv  best_fit_refinement_gpt2.csv  best_fit_refinement_gpt2_edits.csv  best_fit_refinement_gpt2_iou.csv  best_fit_refinement_gpt2_new.csv  best_fit_refinement_t5.csv  best_fit_refinement_tiny_llama_iou.csv  best_fit_roberta.csv  best_fit_t5.csv  best_fit_tinyllama.csv  cot_scores.csv  generic_sentences.csv  gpt2_k1_automation_scores.npy  hypothesis_generation_tiny_code.txt  hypothesis_similarity_70programs_3sent.npy  interpolation_experiment_gpt2_lasso_a=0.001_k=N.npy  interpolation_experiment_gpt2_lasso_a=0.01_k=N.npy  interpolation_experiment_gpt2_ridge_k=N.npy  interpolation_k_tinyllama.csv  interpolation_k_tinyllama_3.csv  interpolation_k_tl_copy.csv  iou_scores_tinyllama_part2.csv  iou_scores_tl_temp.csv  (+12 more)
viewllm/: .gitignore  pyproject.toml
viewllm/attention_patterns/: programs.py  scoring.py  visualizations.py
(+2215 files in other folders)
